--- a/rockstarsite/rockstarsite/motorhead.html
+++ b/rockstarsite/rockstarsite/motorhead.html
@@ -3,10 +3,13 @@
 <head>
     <title></title>
 	<meta charset="utf-8" />
+    <style type="text/css">
+        body { font-family: 'Courier New'; font-size: 9px; }
+    </style>
 </head>
 <body>
     <h1>We are motorhead and we play rock and roll</h1>
-    <img src="https://media.giphy.com/media/2DQXE9KcyMyCA/giphy.gif" />
+    <img src="https://media.giphy.com/media/tAZztAIgqSRhu/giphy.gif" />
     <div>don't sweat it...give it back to you</div>
 </body>
 </html>
